# swc-plugin-minify-graphql

./: CHANGELOG.md  Cargo.toml  README.md  biome.json  cliff.toml  cspell.json  dprint.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
fuzz/: Cargo.toml  package.json
src/: lib.rs  str_span.rs  visitor.rs
utils/: build.sh  cargo_set_version.sh
