[workspace]
members = [".", "packages/graphql-minify", "packages/graphql_semantic_compare"]

[workspace.package]
version = "0.4.0"
authors = ["hikiko4ern"]
edition = "2024"
license = "Unlicense OR MIT"
publish = false
repository = "https://github.com/hikiko4ern/swc-plugin-minify-graphql"

[package]
name = "swc-plugin-minify-graphql"
version.workspace = true
authors.workspace = true
categories = ["swc-plugin"]
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "GraphQL query and schema minimizer plugin for SWC"

[lib]
crate-type = ["cdylib"]

[dependencies]
graphql-minify = { version = "0.1.0", path = "packages/graphql-minify" }
swc_core = { version = "46", features = ["ecma_plugin_transform"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }

# let's use `cargo-run-bin` while there is no built-in solution for
# https://github.com/rust-lang/cargo/issues/2267
[workspace.metadata.bin]
cargo-binstall = { version = "1.15.6", locked = true }
cargo-edit = { version = "0.13.7", locked = true, bins = ["cargo-set-version"] }
cargo-watch = { version = "8.5.3", locked = true, bins = ["cargo-watch"] }

[profile.release]
codegen-units = 1
strip = true
lto = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
