[package]
name = "swc-plugin-minify-graphql-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
afl = "0.15"
arbitrary = "1.4"
graphql-minify = { version = "0.1.0", path = "../packages/graphql-minify" }

# let's use `cargo-run-bin` while there is no built-in solution for
# https://github.com/rust-lang/cargo/issues/2267
[workspace.metadata.bin]
cargo-binstall = { version = "1.15.6", locked = true }
cargo-afl = { version = "0.15.20", locked = true, bins = ["cargo-afl"] }

[workspace]
members = ["."]

[[bin]]
name = "minify"
path = "fuzz_targets/minify.rs"
test = false
doc = false
bench = false
